--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-dom": "^16.13.1",
     "react-scripts": "3.4.1",
     "styled-components": "^5.1.0",
+    "styled-components-ts": "0.0.15",
     "typescript": "^3.7.5"
   },
   "scripts": {
